Finished all recipe pages, still missing description

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Popular Filipino Recipes</h1>
+    <img src="https://a-z-animals.com/media/2022/12/shutterstock_1716666382.jpg" width="670" height="370">
     <ul>
         <li><a href="recipes/adobo.html">Adobo</a></li>
         <li><a href="recipes/sinigang.html">Sinigang</a></li>
