--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adobo Recipe</title>
 </head>
+
 <body>
     <h1>Adobo</h1>
     <img src="../recipe-images/adobo.jpg" height="700" width="700">
+    <ul>
+        <h4>Ingredients:</h4>
+        <li>2 tablespoons vegetable oil</li>
+        <li>1 (3 pound) chicken, <i>cut into pieces</i></li>
+        <li>1 large onion, <i>quartered and sliced</i></li>
+        <li>2 tablespoons minced garlic</li>
+        <li>⅔ cup low sodium soy sauce</li>
+        <li>⅓ cup white vinegar</li>
+        <li>1 tablespoon garlic powder</li>
+        <li>2 teaspoons black pepper</li>
+        <li>1 bay leaf</li>
+    </ul>
+    <ol>
+        <h4>Instructions:</h4>
+        <li>Heat vegetable oil in a large skillet over medium-high heat.</li>
+        <li>Cook chicken pieces until golden brown, 2 to 3 minutes per side.</li>
+        <li>Transfer chicken to a plate and set aside.</li>
+        <li>Add onion and garlic to the skillet; cook until softened and brown, about 6 minutes.</li>
+        <li>Pour in soy sauce and vinegar and season with garlic powder, black pepper, and bay leaf.</li>
+        <li>Return chicken to pan, increase heat to high, and bring to a boil.</li>
+        <li>Reduce heat to medium-low, cover, and simmer</li>
+        <li>until chicken is tender and cooked through, 35 to 40 minutes.</li>
+    </ol>
     <div>
         <a href="../index.html">Back to menu</a>
     </div>
 </body>
+
 </html>
