Added a description to all the recipes.

--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Sinigang</h1>
     <img src="../recipe-images/sinigang.jpg" height="700" width="700">
+    <p>Sinigang is a Filipino soup or stew characterized by its sour and savory taste. It is most often associated with
+        tamarind, although it can use other sour fruits and leaves as the souring agent. <br>
+        It is one of the more popular dishes in Filipino cuisine. The soup is usually accompanied by rice.</p>
     <ul>
         <h4>Ingredients:</h4>
         <li>2 lbs pork belly or buto-buto</li>
