--- a/recipes/sisig.html
+++ b/recipes/sisig.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Sisig</h1>
     <img src="../recipe-images/sisig.jpg" height="600" width="400">
+    <p>Sisig is a Filipino dish made from pork jowl and ears, pork belly, and chicken liver,
+        which is usually seasoned with calamansi, onions, and chili peppers. <br>
+        It originates from the Pampanga region in Luzon. Sisig is a staple of Kapampangan cuisine. </p>
     <ul>
         <h4>Ingredients:</h4>
         <li>1 lb. pig ears</li>
