--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Adobo</h1>
     <img src="../recipe-images/adobo.jpg" height="700" width="700">
+    <p>Philippine adobo is a popular Filipino dish and cooking process in Philippine cuisine of, in its base form, meat,
+        seafood, or vegetables first browned in oil, and then marinated and simmered vinegar, salt and/or soy sauce, and garlic.
+        It has occasionally been considered the unofficial national dish in the Philippines</p>
     <ul>
         <h4>Ingredients:</h4>
         <li>2 tablespoons vegetable oil</li>
